# ai-on-telegram

./: README.md  docker-compose.yml  manage.py  pyproject.toml
accounts/: models.py  permissions.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
ai_on_telegram/: asgi.py  settings.py  urls.py  wsgi.py
bot/: bot.py  models.py  views.py
bot/migrations/: 0001_initial.py
